[project]
name = "luminaut"
version = "0.1.0"
description = "Casting light on shadow cloud deplouments"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3~=1.35.53",
    "python3-nmap~=1.9.1",
    "rich~=13.9.4",
]

[project.scripts]
luminaut = "luminaut.__main__:main"

[dependency-groups]
dev = [
    "moto>=5.0.18",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "ruff>=0.8.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # isort
    "I",
]
